# LoRA-PEFT-Finetune

./: .gitignore  README.md  config.py  evaluate.py  main.py  pyproject.toml  requirements.txt  train.py
data/: __init__.py  dataset.py
evaluation/: __init__.py  eval.py  eval_data.py  metrics.py
model/: __init__.py  load_model.py  load_tokenizer.py
notebooks/: lora_peft_finetune.ipynb  text_completion.ipynb
prompt/: __init__.py  template.py
tracking/: __init__.py  wandb_logger.py
