[project]
name = "lora-peft-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "jupyter>=1.1.1",
    "peft>=0.18.1",
    "python-dotenv>=1.2.2",
    "transformers>=5.5.0",
    "trl>=1.0.0",
]
